--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ header {
     #container_h1 {
         display: flex;
         flex-direction: column;
-
+        justify-content: end;
         width: 1180px;
         height: 190px;
         font-size: 40px;
