--- a/assets/style.css
+++ b/assets/style.css
@@ -238,7 +238,7 @@ header {
 
 /*titolo e selezione dei piani di pagamento*/
 
-#container_title_selection_pg {
+#container_title_pg {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -248,14 +248,27 @@ header {
 
     #titolo_paini_pag {
         width: 1000px;
-        height: 45px;
-        margin-bottom: 60px;
+        height: 20px;
+        margin-bottom: 50px;
+        font-size: 45px;
     }
 
+
+
+}
+
+#s_container_section_pg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1000px;
+    height: 40px;
+    margin-bottom: 50px;
+
     #selezione_fatt {
-        width: 1000px;
         height: 25px;
-        margin-bottom: 50px;
+        width: 200px;
+        margin-right: 7px;
     }
 }
 
@@ -270,13 +283,33 @@ header {
     #row_p_p_top {
         display: flex;
         width: 1000px;
+
+
+        .testa_p_p {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: calc(100% / 12 * 4);
+
+            .container_testa {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid var(--drop-lighter_color);
+                height: 40px;
+                width: 300px;
+            }
+
+
+
+
+        }
+
+
     }
 
 
-    .testa_p_p {
-        height: 40px;
-        width: calc(100% / 12 * 4)
-    }
+
 }
 
 #container_piani_pagamento_middle {
@@ -292,8 +325,40 @@ header {
 
     .corpo_p_p {
         height: 100%;
+        display: flex;
+        justify-content: center;
+        height: 100%;
         width: calc(100% / 12 * 4)
     }
+
+    .container_corpo {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid var(--drop-lighter_color);
+        width: 300px;
+        padding: 30px;
+
+        .titolo_scheda {
+            padding-bottom: 20px;
+        }
+
+        .prezzo {
+            padding-bottom: 20px;
+        }
+
+        .periodo_di_pag {
+            color: var(--drop-lighter_color);
+            padding-bottom: 50px;
+        }
+
+        .vantaggi {
+            margin-bottom: 20px;
+            font-size: 15px;
+        }
+    }
+
+
+
 }
 
 #container_piani_pagamento_buttom {
