--- a/assets/style.css
+++ b/assets/style.css
@@ -264,6 +264,7 @@ header {
     width: 1000px;
     height: 40px;
     margin-bottom: 50px;
+    margin-top: 50px;
 
     #selezione_fatt {
         height: 25px;
@@ -361,6 +362,7 @@ header {
                 display: flex;
 
                 .vantaggi {
+                    margin-left: 5px;
                     margin-bottom: 20px;
                     font-size: 15px;
                 }
@@ -371,9 +373,7 @@ header {
                 flex-direction: column;
                 justify-content: space-between;
 
-                .fa-user {
-                    margin-right: 5px;
-                }
+                .fa-user {}
 
                 .fa-folder {
                     margin-bottom: 20px;
@@ -403,6 +403,21 @@ header {
             color: white;
         }
 
+        #contattaci_button {
+            padding-top: 10px;
+            padding-left: 65px;
+            padding-right: 15px;
+            padding-bottom: 10px;
+            margin-top: 50px;
+            margin-bottom: 35px;
+            margin-left: 15px;
+            width: 210px;
+            text-decoration: none;
+            background-color: var(--drop-sea_color);
+            color: white;
+
+        }
+
         hr {
             width: 50px;
             margin-top: 40px;
@@ -423,12 +438,68 @@ header {
             .check_icon {
                 display: flex;
                 flex-direction: column;
-                justify-content: space-around;
+                justify-content: space-between;
+                position: relative;
 
-                .fa-check {
-                    margin-bottom: 40px;
-                    margin-right: 5px;
+                #check_1 {
                     color: var(--drop-sea_color);
+                    position: relative;
+                    right: 5px;
+                }
+
+                #check_2 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    bottom: 37px;
+                    right: 5px;
+                }
+
+                #check_3 {
+                    color: var(--drop-sea_color);
+                    position: relative;
+                    right: 5px;
+                }
+
+                #check_4 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    right: 5px;
+                    top: 37px;
+                }
+
+                #check_5 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    top: 92px;
+                    right: 5px;
+                }
+
+                #check_6 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    top: 147px;
+                    right: 5px;
+                }
+
+                #check_7 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    top: 202px;
+                    right: 5px;
+                }
+
+                #check_8 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    top: 53px;
+                    right: 5px;
+                }
+
+                #check_9 {
+                    color: var(--drop-sea_color);
+                    position: absolute;
+                    top: 91px;
+                    right: 5px;
                 }
             }
 
